# rico

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/api/: route.rs
