[package]
name = "rico"
description = "Rico is an algorithm that recommends media based on the given parameters."
version = "0.1.0"
edition = "2024"
authors = ["Shemmy n3shemmy3.dev"]

[dependencies]
axum-folder-router = "0.4.1"
axum = { version = "0.8.8" }

tokio = { version = "1", features = ["full"] }

anyhow = "1.0.100"

log = "0.4.29"